--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
+color:red;
 }
 
 .App-logo {
@@ -35,4 +40,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+.ab{
+  color:red;
 }
